--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           <option value="Other">Other</option>
         </select>
 
+        <button onclick="backToStep1()">← Back</button>
         <button id="continueStep2">Continue</button>
       </div>
 
