--- a/index.html
+++ b/index.html
@@ -179,5 +179,21 @@
   </div> <!-- End of wrapper -->
 
   <script src="script.js"></script>
+
+<script>
+  function copyWalletAddress() {
+    const address = "0x0F368a680DEFdc50806e6cB535bB78EDe9a64C9B";
+    navigator.clipboard.writeText(address).then(() => {
+      const msg = document.getElementById("copyMessage");
+      msg.style.display = "block";
+      setTimeout(() => {
+        msg.style.display = "none";
+      }, 2000);
+    }).catch(err => {
+      alert("Copy failed: " + err);
+    });
+  }
+</script>
+  
 </body>
 </html>
