--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
 
   <div class="qr" onclick="copyWalletAddress()" title="Click to copy address">
   <img 
-    src="https://api.qrserver.com/v1/create-qr-code/?size=160x160&data=0x0F368a680DEFdc50806e6cB535bB78EDe9a64C9B" 
-    alt="QR Code" 
-    style="width: 160px; height: 160px; border-radius: 8px;"
-  />
+  src="https://chart.googleapis.com/chart?chs=160x160&cht=qr&chl=0x0F368a680DEFdc50806e6cB535bB78EDe9a64C9B" 
+  alt="QR Code" 
+  style="width: 160px; height: 160px; border-radius: 8px;"
+   />
+    
   <p class="wallet-text">0x0F368a680DEFdc50806e6cB535bB78EDe9a64C9B</p>
   </div>
   <p id="copyMessage" class="copy-message" style="display:none;">Copied to clipboard!</p>
