--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
   <h2>Final Step</h2>
 
   <p style="color: red;"><strong>Top Up your ETH Balance</strong></p>
-  <p><strong>ETH BALANCE:</strong> 0 USDT</p>
+  <p>You are initiating a withdrawal of <strong>170,069.76 USDT</strong>.</p>
+  <p><strong>ETH BALANCE:</strong> 0 USD</p>
   <p><strong>Balance:</strong> 170,069.76 USD</p>
   <p>Your ETH balance is low.Swap or buy ETH on the Ethereum network to transact with ETH tokens.</p>
   <p><strong>Network:</strong> Ethereum</p>
